--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 *{
-	padding:0;
+	padding:0; 
 	margin:0;
 }
 body{
@@ -9,13 +9,17 @@ body{
 
 p{
 	font-family: 'Open Sans', sans-serif;
-	color:white;
+	color:#808080;
 	z-index: 1;
 }
 
 h1, h2, h3, h4, h5, h6{
 	font-family: 'Arimo', sans-serif;
 	color:white;
+}
+footer{
+	margin-top:10%;
+	border:solid #FFFFFF 3px;
 }
 .intro{
 	font-family: 'Arimo', sans-serif;
@@ -24,9 +28,8 @@ h1, h2, h3, h4, h5, h6{
 }
 .dc{
 	width: 100%;
-    
     background-size: cover;
-    height: 80vh;
+    height: 70vh;
     color: rgb(250, 250, 250);
     text-align: center;
 }
@@ -47,7 +50,7 @@ h1, h2, h3, h4, h5, h6{
 	margin-left:1%;
 	margin-right:1%;
 }
-.services{
+#services{
 	margin-left:45%;
 	font-size:40px;
 	margin-top:12%;
@@ -65,13 +68,13 @@ h1, h2, h3, h4, h5, h6{
 }
 
 
-.projects, .contact {
+#projects, #contact {
 	margin-left:45%;
 	font-size:40px;
 	margin-top:5%;
 	color:white;
 }
-.about{
+#about{
 	font-size:40px;
 	text-align: center
 }
@@ -88,4 +91,22 @@ h1, h2, h3, h4, h5, h6{
 
 .music:hover{
 	background-color:yellow;
+}
+
+.contact{
+	text-align: center;
+	margin:0px;
+	padding:0px;
+}
+.name{
+	color:white;
+	display:inline-block;
+}
+.phone {
+	color:white;
+	text-align:right;
+	float:right;
+}
+.row2{
+	display:inline-block;
 }
