--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,9 @@
 	padding:0; 
 	margin:0;
 }
+a{
+	color:grey;
+}
 body{
 	padding-bottom:30px;
 	background-color:black;
@@ -15,7 +18,8 @@ p{
 
 h1, h2, h3, h4, h5, h6{
 	font-family: 'Arimo', sans-serif;
-	color:white;
+	color:#808080;
+	margin-top:8%;
 }
 footer{
 	margin-top:10%;
@@ -23,7 +27,7 @@ footer{
 }
 .intro{
 	font-family: 'Arimo', sans-serif;
-	color:black;
+	color:#808080;
 	font-size:16px;
 }
 .dc{
@@ -54,7 +58,7 @@ footer{
 	margin-left:45%;
 	font-size:40px;
 	margin-top:12%;
-	color:white;
+	color:#808080;
 }
 
 #ux-hide{
@@ -72,7 +76,7 @@ footer{
 	margin-left:45%;
 	font-size:40px;
 	margin-top:5%;
-	color:white;
+	color:#808080;
 }
 #about{
 	font-size:40px;
@@ -99,14 +103,19 @@ footer{
 	padding:0px;
 }
 .name{
-	color:white;
+	color:#808080;
 	display:inline-block;
 }
 .phone {
-	color:white;
+	color:#808080;
 	text-align:right;
 	float:right;
 }
 .row2{
 	display:inline-block;
+}
+.links{
+	text-align: right;
+	font-size:35px;
+
 }
