--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,7 @@ a{
 body{
 	padding-bottom:30px;
 	background-color:black;
-	margin:1%;
+	margin:2%;
 }
 
 p{
@@ -17,10 +17,13 @@ p{
 	z-index: 1;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h3, h4, h5, h6{
 	font-family: 'Arimo', sans-serif;
 	color:#808080;
 	margin-top:8%;
+}
+h2{
+	text-align: center;
 }
 footer{
 	margin-top:10%;
@@ -114,6 +117,7 @@ footer{
 }
 .row2{
 	display:inline-block;
+	text-align: center;
 }
 
 .links{
@@ -128,5 +132,18 @@ footer{
 .project-container{
 	height:100%;
 }
+.lead{
+	margin-bottom:10%;
+	font-size:16px;
+	text-align: center;
 
+}
+.row3{
+	height:100%;
+	margin-bottom:40%;
+}
+.title{
+	text-align: center;
+	font-size:20px;
+}
 
