--- a/public/css/index.css
+++ b/public/css/index.css
@@ -24,10 +24,10 @@ h1, h3, h4, h5, h6{
 }
 h2{
 	text-align: center;
+	color:#808080
 }
 footer{
 	margin-top:10%;
-	border:solid #FFFFFF 3px;
 }
 .intro{
 	font-family: 'Arimo', sans-serif;
@@ -39,7 +39,7 @@ footer{
     background-size: cover;
     height: 70vh;
     color: rgb(250, 250, 250);
-    text-align: center;
+    text-align: center;f
 }
 
 .background{
@@ -135,6 +135,7 @@ footer{
 	margin-bottom:10%;
 	font-size:16px;
 	text-align: center;
+	color:#808080;
 
 }
 .row3{
