--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,7 +39,10 @@ footer{
     background-size: cover;
     height: 70vh;
     color: rgb(250, 250, 250);
-    text-align: center;f
+    text-align: center;
+    position:fixed;
+    opacity:0.3;
+    z-index: -1;
 }
 
 .background{
@@ -65,15 +68,16 @@ footer{
 }
 
 #ux-hide{
+	font-size:40px;
+	color:white;
 	display:none;
-	font-size:10px;
 }
 
 .thumbnail:hover #ux-hide{
 	display:block;
-	opacity:2;
+	opacity:1.0;
+	color:white;
 }
-
 
 #projects, #contact {
 	margin-left:45%;
@@ -81,14 +85,15 @@ footer{
 	margin-top:5%;
 	color:#808080;
 }
-#about{
-	font-size:40px;
-	text-align: center
+#myself{
+	font-size:50px;
+	text-align: center;
+	margin-bottom:40%;
+	margin-top:15%;
+	color:white;
 }
 
-.uxui{
-	height:10%;
-}
+
 .programmer{
 	margin-top:6%;
 }
@@ -140,10 +145,48 @@ footer{
 }
 .row3{
 	height:100%;
-	margin-bottom:40%;
+	margin-bottom:35%;
 }
 .title{
 	text-align: center;
 	font-size:20px;
 }
 
+ul.img-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+ul.img-list li {
+  display: inline-block;
+  height: 150px;
+  margin: 0 1em 1em 0;
+  position: relative;
+  width: 100%;
+}
+
+span.text-content {
+  background: rgba(0,0,0,0.5);
+  color: white;
+  cursor: pointer;
+  display: table;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  opacity:0;
+   -webkit-transition: opacity 500ms;
+  -moz-transition: opacity 500ms;
+  -o-transition: opacity 500ms;
+  transition: opacity 500ms;
+}
+span.text-content span {
+  display: table-cell;
+  vertical-align: top;
+}
+ul.img-list li:hover span.text-content {
+  opacity: 1;
+}
