--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,8 @@
 	margin:0;
 }
 a{
-	color:grey;
+	color:black;
+	font-size:15px;
 }
 body{
 	padding-bottom:30px;
@@ -13,8 +14,8 @@ body{
 
 p{
 	font-family: 'Open Sans', sans-serif;
-	color:#808080;
-	z-index: 1;
+	font-size:16px;
+	color:white;
 }
 
 h1, h3, h4, h5, h6{
@@ -24,7 +25,8 @@ h1, h3, h4, h5, h6{
 }
 h2{
 	text-align: center;
-	color:#808080
+	color:#808080;
+	z-index:1;
 }
 footer{
 	margin-top:10%;
@@ -34,16 +36,7 @@ footer{
 	color:#808080;
 	font-size:16px;
 }
-.dc{
-	width: 100%;
-    background-size: cover;
-    height: 70vh;
-    color: rgb(250, 250, 250);
-    text-align: center;
-    position:fixed;
-    opacity:0.3;
-    z-index: -1;
-}
+
 
 .background{
 	width:100%;
@@ -53,14 +46,34 @@ footer{
 	margin-bottom:10%;
 
 }
+.dc{
+	width: 100%;
+    background-size: cover;
+    height: 100vh;
+    color: rgb(250, 250, 250);
+    text-align: center;
+    position:relative;
+    background-color:black;
+ 
+  }
+  #myself{
+	font-size:65px;
+	text-align: center;
+	margin-bottom:22%;
+	margin-top:2%;
+	color:white;
+	position: absolute;
+	top:8%;
+	left:0;
+	width:100%;
+}
 .me{
-	background-image:url("images/background.jpg");
 	width:20%;
 	float:left;
 	margin-left:1%;
 	margin-right:1%;
 }
-#services{
+#skills{
 	margin-left:45%;
 	font-size:40px;
 	margin-top:12%;
@@ -85,13 +98,7 @@ footer{
 	margin-top:5%;
 	color:#808080;
 }
-#myself{
-	font-size:65px;
-	text-align: center;
-	margin-bottom:22%;
-	margin-top:9%;
-	color:white;
-}
+
 .quote{
 	color:white;
 	margin-bottom:5%;
@@ -144,10 +151,9 @@ footer{
 	height:100%;
 }
 .lead{
-	margin-bottom:10%;
+	margin-bottom:3%;
 	font-size:25px;
 	text-align: center;
-	color:#808080;
 
 }
 .row3{
