--- a/public/css/index.css
+++ b/public/css/index.css
@@ -106,6 +106,11 @@ footer{
 	font-style:hagin;
 }
 
+.quotes{
+	color:grey;
+	font-size:40px;
+	text-align: center;
+}
 
 .programmer{
 	margin-top:6%;
@@ -150,6 +155,7 @@ footer{
 .project-container{
 	height:100%;
 }
+
 .lead{
 	margin-bottom:3%;
 	font-size:25px;
@@ -180,6 +186,11 @@ ul.img-list li {
   width: 100%;
 }
 
+.quote{
+	color:white;
+	text-align: center;
+}
+
 span.text-content {
   background: rgba(0,0,0,0.5);
   color: white;
@@ -203,3 +214,4 @@ span.text-content span {
 ul.img-list li:hover span.text-content {
   opacity: 1;
 }
+
