--- a/public/css/index.css
+++ b/public/css/index.css
@@ -183,7 +183,8 @@ ul.img-list li {
   height: 150px;
   margin: 0 1em 1em 0;
   position: relative;
-  width: 100%;
+  height:100%;
+  width:100%;
 }
 
 .quote{
@@ -198,9 +199,10 @@ span.text-content {
   display: table;
   height: 130%;
   left: 0;
+  width:52%;
+  margin-left:24%;
   position: absolute;
   top: 0;
-  width: 100%;
   opacity:0;
    -webkit-transition: opacity 500ms;
   -moz-transition: opacity 500ms;
