Adding hovering to skills

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,14 +8,14 @@ a{
 }
 body{
 	padding-bottom:30px;
-	background-color:black;
-	margin:2%;
 }
 
 p{
 	font-family: 'Open Sans', sans-serif;
 	font-size:16px;
-	color:white;
+	color:#E8F1E8;
+	margin-left:9%;
+	width:80%;
 }
 
 h1, h3, h4, h5, h6{
@@ -36,6 +36,9 @@ footer{
 	color:#808080;
 	font-size:16px;
 }
+.background-container{
+	background-color:black;
+}
 
 
 .background{
@@ -45,6 +48,11 @@ footer{
 	z-index: -1;
 	margin-bottom:10%;
 
+}
+
+.skills-container{
+	background-color:white;
+	margin-top:25%;
 }
 .dc{
 	width: 100%;
@@ -76,20 +84,20 @@ footer{
 #skills{
 	margin-left:45%;
 	font-size:40px;
-	margin-top:12%;
+	margin-top:33%;
 	color:#808080;
 }
 
 #ux-hide{
 	font-size:40px;
-	color:white;
+	color:#000000;
 	display:none;
 }
 
 .thumbnail:hover #ux-hide{
 	display:block;
 	opacity:1.0;
-	color:white;
+	color:#000000;
 }
 
 #projects, #contact {
@@ -127,7 +135,6 @@ footer{
 	text-align: center;
 	margin:0px;
 	padding:0px;
-	border-style:groove 2px white;
 }
 .name{
 	color:#808080;
@@ -155,12 +162,24 @@ footer{
 .project-container{
 	height:100%;
 }
+.biography-container{
+	background-color:#717671;
+	position:absolute;
+	height:65%;
+}
 
 .lead{
 	margin-bottom:3%;
 	font-size:25px;
 	text-align: center;
 
+}
+.me{
+	text-align: center;
+	color:#E8F1E8;
+	margin:0 0 2% 14%;
+	font-size:40px;
+	margin-bottom:2%;
 }
 .row3{
 	height:100%;
@@ -185,35 +204,100 @@ ul.img-list li {
   position: relative;
   height:100%;
   width:100%;
+  z-index: 2;
 }
 
 .quote{
-	color:white;
+	color:#000000;
 	text-align: center;
 }
 
-span.text-content {
-  background: rgba(0,0,0,0.5);
-  color: white;
-  cursor: pointer;
-  display: table;
-  height: 130%;
-  left: 0;
-  width:52%;
-  margin-left:24%;
-  position: absolute;
-  top: 0;
-  opacity:0;
-   -webkit-transition: opacity 500ms;
-  -moz-transition: opacity 500ms;
-  -o-transition: opacity 500ms;
-  transition: opacity 500ms;
+
+.hovereffect {
+width:100%;
+height:100%;
+float:left;
+overflow:hidden;
+position:relative;
+text-align:center;
+cursor:default;
 }
-span.text-content span {
-  display: table-cell;
-  vertical-align: top;
+
+.hovereffect .overlay {
+width:100%;
+height:100%;
+position:absolute;
+overflow:hidden;
+top:0;
+left:0;
+opacity:0;
+background-color:rgba(0,0,0,0.5);
+-webkit-transition:all .4s ease-in-out;
+transition:all .4s ease-in-out
 }
-ul.img-list li:hover span.text-content {
-  opacity: 1;
+
+.hovereffect img {
+display:block;
+position:relative;
+-webkit-transition:all .4s linear;
+transition:all .4s linear;
+}
+
+.hovereffect h2 {
+text-transform:uppercase;
+color:#fff;
+text-align:center;
+position:relative;
+font-size:17px;
+background:rgba(0,0,0,0.6);
+-webkit-transform:translatey(-100px);
+-ms-transform:translatey(-100px);
+transform:translatey(-100px);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+padding:10px;
+}
+
+.hovereffect a.info {
+text-decoration:none;
+display:inline-block;
+text-transform:uppercase;
+color:#fff;
+border:1px solid #fff;
+background-color:transparent;
+opacity:0;
+filter:alpha(opacity=0);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+margin:50px 0 0;
+padding:7px 14px;
+}
+
+.hovereffect a.info:hover {
+box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+-ms-transform:scale(1.2);
+-webkit-transform:scale(1.2);
+transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+opacity:1;
+filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+opacity:1;
+filter:alpha(opacity=100);
+-ms-transform:translatey(0);
+-webkit-transform:translatey(0);
+transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+-webkit-transition-delay:.2s;
+transition-delay:.2s;
 }
 
