more changes to styling

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -75,16 +75,11 @@ footer{
 	left:0;
 	width:100%;
 }
-.me{
-	width:20%;
-	float:left;
-	margin-left:1%;
-	margin-right:1%;
-}
+
 #skills{
-	margin-left:45%;
+	margin:42% 0 5% 42%;
 	font-size:40px;
-	margin-top:33%;
+	
 	color:#808080;
 }
 
@@ -100,7 +95,7 @@ footer{
 	color:#000000;
 }
 
-#projects, #contact {
+#contact {
 	margin-left:45%;
 	font-size:40px;
 	margin-top:5%;
@@ -162,10 +157,10 @@ footer{
 .project-container{
 	height:100%;
 }
-.biography-container{
+.biography-container, .project-container{
 	background-color:#717671;
 	position:absolute;
-	height:65%;
+	height:70%;
 }
 
 .lead{
@@ -174,12 +169,11 @@ footer{
 	text-align: center;
 
 }
-.me{
-	text-align: center;
+
+.me, #projects{
 	color:#E8F1E8;
-	margin:0 0 2% 14%;
+	margin:0 0 2% 42%;
 	font-size:40px;
-	margin-bottom:2%;
 }
 .row3{
 	height:100%;
@@ -212,6 +206,11 @@ ul.img-list li {
 	text-align: center;
 }
 
+.education,.sales,.coding{
+	margin-right:38%;
+	font-size:20px;
+}
+
 
 .hovereffect {
 width:100%;
@@ -221,17 +220,18 @@ overflow:hidden;
 position:relative;
 text-align:center;
 cursor:default;
+margin-left:10%;
 }
 
 .hovereffect .overlay {
-width:100%;
+width:90%;
 height:100%;
 position:absolute;
 overflow:hidden;
 top:0;
 left:0;
 opacity:0;
-background-color:rgba(0,0,0,0.5);
+background-color:grey;
 -webkit-transition:all .4s ease-in-out;
 transition:all .4s ease-in-out
 }
