--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,23 +5,29 @@
 a{
 	color:black;
 	font-size:15px;
+	vertical-align: top;
 }
 body{
 	padding-bottom:30px;
+	background-color:#292929;
+	font-family: "oswald",sans-serif;
+	font-weight:100;
 }
 
 p{
-	font-family: 'Open Sans', sans-serif;
+	font-family: "oswald",sans-serif;
 	font-size:16px;
 	color:#E8F1E8;
 	margin-left:9%;
 	width:80%;
+	font-weight:100;
 }
 
 h1, h3, h4, h5, h6{
-	font-family: 'Arimo', sans-serif;
-	color:#808080;
+	font-family: "oswald",sans-serif;
+	color:white;
 	margin-top:8%;
+	font-weight:100;
 }
 h2{
 	text-align: center;
@@ -29,17 +35,19 @@ h2{
 	z-index:1;
 }
 footer{
-	margin-top:10%;
+	border:solid 3px white;
+	margin-top:5%;
+	background-color:white;
+}
+i{
+	vertical-align: top;
 }
 .intro{
-	font-family: 'Arimo', sans-serif;
+	font-family: "oswald",sans-serif;
 	color:#808080;
 	font-size:16px;
+	font-weight:100;
 }
-.background-container{
-	background-color:black;
-}
-
 
 .background{
 	width:100%;
@@ -58,13 +66,11 @@ footer{
 	width: 100%;
     background-size: cover;
     height: 100vh;
-    color: rgb(250, 250, 250);
     text-align: center;
     position:relative;
-    background-color:black;
- 
-  }
-  #myself{
+}
+
+#myself{
 	font-size:65px;
 	text-align: center;
 	margin-bottom:22%;
@@ -77,17 +83,11 @@ footer{
 }
 
 #skills{
-	margin:42% 0 5% 42%;
-	font-size:40px;
-	
-	color:#808080;
+	margin:42% 0 5% 44%;
+	font-size:38px;
+	color:black;
 }
 
-#ux-hide{
-	font-size:40px;
-	color:#000000;
-	display:none;
-}
 
 .thumbnail:hover #ux-hide{
 	display:block;
@@ -96,10 +96,10 @@ footer{
 }
 
 #contact {
-	margin-left:45%;
-	font-size:40px;
-	margin-top:5%;
+	font-size:38px;
+	margin-top:%;
 	color:#808080;
+	margin-left:44%;
 }
 
 .quote{
@@ -107,12 +107,6 @@ footer{
 	margin-bottom:5%;
 	font-size:22px;
 	font-style:hagin;
-}
-
-.quotes{
-	color:grey;
-	font-size:40px;
-	text-align: center;
 }
 
 .programmer{
@@ -141,8 +135,8 @@ footer{
 	float:right;
 }
 .row2{
-	display:inline-block;
 	text-align: center;
+	
 }
 
 .links{
@@ -158,7 +152,7 @@ footer{
 	height:100%;
 }
 .biography-container{
-	background-color:#717671;
+	background-color:#292929;
 	position:absolute;
 	height:70%;
 }
@@ -172,19 +166,19 @@ footer{
 
 .me {
 	color:#E8F1E8;
-	margin:0 0 2% 42%;
-	font-size:40px;
+	margin:0 0 2% 44%;
+	font-size:38px;
 }
 
 #projects{
 	text-align: center;
-	color:black;
-	background-color:#717671;
-	font-size:40px;
+	color:white;
+	font-size:38px;
 }
 .row3{
 	height:100%;
 	margin-bottom:35%;
+	background-color: #E6E5E1;
 }
 .title{
 	text-align: center;
@@ -218,11 +212,23 @@ ul.img-list li {
 	font-size:20px;
 }
 
+.more-info{
+	color:black;
+	font-size:20px;
+}
 
+.mail,.resume{
+	vertical-align: top;
+}
+.home{
+	text-align: left;
+}
 .hovereffect {
 width:100%;
 height:100%;
+margin-bottom:37%;
 float:left;
+background-color:#E6E5E1;
 overflow:hidden;
 position:relative;
 text-align:center;
