changes to margins within timeline

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,7 +16,7 @@ body{
 
 p{
 	font-family: "oswald",sans-serif;
-	font-size:16px;
+	font-size:24px;
 	color:#E8F1E8;
 	margin-left:9%;
 	width:80%;
@@ -58,10 +58,6 @@ i{
 
 }
 
-.skills-container{
-	background-color:white;
-	margin-top:25%;
-}
 .dc{
 	width: 100%;
     background-size: cover;
@@ -83,7 +79,7 @@ i{
 }
 
 #skills{
-	margin:42% 0 5% 44%;
+	margin:42% 0 5% 45%;
 	font-size:38px;
 	color:black;
 }
@@ -151,17 +147,19 @@ i{
 .project-container{
 	height:100%;
 }
-.biography-container{
-	background-color:#292929;
-	position:absolute;
-	height:70%;
-}
 
 .lead{
 	margin-bottom:3%;
 	font-size:25px;
 	text-align: center;
-
+}
+.skills-word{
+	font-family: "oswald",sans-serif;
+	font-size:15px;
+	color:#E8F1E8;
+	margin-left:9%;
+	width:80%;
+	font-weight:100;
 }
 
 .me {
@@ -177,7 +175,7 @@ i{
 }
 .row3{
 	height:100%;
-	margin-bottom:35%;
+	margin:46% 0% 35% 0%;
 	background-color: #E6E5E1;
 }
 .title{
@@ -208,7 +206,7 @@ ul.img-list li {
 }
 
 .education,.sales,.coding{
-	margin-right:38%;
+	margin-right:57%;
 	font-size:20px;
 }
 
@@ -233,11 +231,11 @@ overflow:hidden;
 position:relative;
 text-align:center;
 cursor:default;
-margin-left:10%;
+margin-left:25%;
 }
 
 .hovereffect .overlay {
-width:90%;
+width:72%;
 height:100%;
 position:absolute;
 overflow:hidden;
