--- a/public/css/index.css
+++ b/public/css/index.css
@@ -77,19 +77,19 @@ i{
 	width:100%;
 }
 
-#skills,{
+#skills{
 	text-align: center;
 	color:black;
 	font-family:serif;
 	font-size:38px;
-	color:#808080;
 
 }
 #contact{
 	font-size:38px;
 	color:black;
 	font-family:serif;
-	text-align: center
+	text-align: center;
+	margin-bottom:2%;
 }
 
 
@@ -229,18 +229,20 @@ ul.img-list li {
 }
 
 .home{
-	margin-left:16%;
+	margin:0% 0% 8% 16%;
 	font-family:Roboto, arial, sans-serif;
 
 }
 
 .contact-header{
+	border-bottom:1px solid black;
+	display: table;
+	padding-right:50px;
+	padding-left:50px;
 	font-family:Roboto, arial, sans-serif;
 	font-size:30px;
-	text-decoration: underline;
 	font-weight:bold;
-	margin-top:10%;
-	margin-bottom:6%;
+	margin:10% 0% 3% 0%;
 
 }
 .hovereffect {
