--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,86 +2,111 @@
 	padding:0; 
 	margin:0;
 }
+a{
+	color:black;
+	font-size:15px;
+	vertical-align: top;
+}
 body{
 	padding-bottom:30px;
-	background-color:black;
+	background-color:#292929;
+	font-family: "oswald",sans-serif;
+	font-weight:100;
 }
 
 p{
-	font-family: 'Open Sans', sans-serif;
-	color:#808080;
-	z-index: 1;
+	font-family: "oswald",sans-serif;
+	font-size:18px;
+	color:#E8F1E8;
+	margin-left:9%;
+	width:80%;
+	font-weight:100;
 }
 
-h1, h2, h3, h4, h5, h6{
-	font-family: 'Arimo', sans-serif;
+h1, h3, h4, h5, h6{
+	font-family: "oswald",sans-serif;
 	color:white;
+	margin-top:8%;
+	font-weight:100;
+}
+h2{
+	text-align: center;
+	color:black;
+	font-family:serif;
 }
 footer{
-	margin-top:10%;
-	border:solid #FFFFFF 3px;
+	margin-top:5%;
+	background-color:#E6E5E1
+}
+i{
+	vertical-align: top;
 }
 .intro{
-	font-family: 'Arimo', sans-serif;
-	color:black;
+	font-family: serif;
+	color:#808080;
 	font-size:16px;
-}
-.dc{
-	width: 100%;
-    background-size: cover;
-    height: 70vh;
-    color: rgb(250, 250, 250);
-    text-align: center;
+	font-weight:100;
 }
 
 .background{
 	width:100%;
 	height:50%;
 	margin-right:50%;
-	position:absolute;
 	z-index: -1;
 	margin-bottom:10%;
 
 }
-.me{
-	background-image:url("images/background.jpg");
-	width:20%;
-	float:left;
-	margin-left:1%;
-	margin-right:1%;
-}
-#services{
-	margin-left:45%;
-	font-size:40px;
-	margin-top:12%;
-	color:white;
+
+.dc{
+	width: 100%;
+    background-size: cover;
+    height: 100vh;
+    text-align: center;
+    position:relative;
 }
 
-#ux-hide{
-	display:none;
-	font-size:10px;
+#myself{
+	font-size:65px;
+	text-align: center;
+	margin-bottom:22%;
+	margin-top:2%;
+	color:white;
+	position: absolute;
+	top:8%;
+	left:0;
+	width:100%;
 }
+
+#skills{
+	text-align: center;
+	color:black;
+	font-family:serif;
+	font-size:38px;
+
+}
+#contact{
+	font-size:38px;
+	color:black;
+	font-family:serif;
+	text-align: center;
+	margin-bottom:2%;
+}
+
 
 .thumbnail:hover #ux-hide{
 	display:block;
-	opacity:2;
+	opacity:1.0;
+	color:#000000;
 }
 
 
-#projects, #contact {
-	margin-left:45%;
-	font-size:40px;
-	margin-top:5%;
+.quote{
 	color:white;
-}
-#about{
-	font-size:40px;
-	text-align: center
+	margin-bottom:5%;
+	font-size:22px;
+	font-style:hagin;
 }
 
-.uxui{
-	height:10%;
-}
 .programmer{
 	margin-top:6%;
 }
@@ -93,20 +118,258 @@ footer{
 	background-color:yellow;
 }
 
-.contact{
-	text-align: center;
-	margin:0px;
-	padding:0px;
-}
 .name{
-	color:white;
+	color:#808080;
 	display:inline-block;
 }
 .phone {
-	color:white;
-	text-align:right;
-	float:right;
+	color:#808080;
 }
 .row2{
-	display:inline-block;
+	text-align: center;
 }
+.map{
+	display: inline-block;
+}
+.info{
+	display: inline-block;
+	vertical-align: top;
+	width:25%;
+	text-align: left;
+	margin-left:17%;
+}
+
+.links{
+	text-align: right;
+	font-size:15px;
+	text-decoration:underline;
+	text-align;right;
+	width:100%;
+	z-index:1;
+	margin-right:5%;
+}
+.project-container{
+	height:100%;
+}
+
+.lead{
+	margin-bottom:3%;
+	font-size:25px;
+	text-align: center;
+}
+.skills-word{
+	font-family: "oswald",sans-serif;
+	font-size:15px;
+	color:#E8F1E8;
+	margin-left:9%;
+	width:80%;
+	font-weight:100;
+}
+
+.me {
+	color:#E8F1E8;
+	margin:0 0 2% 44%;
+	font-size:38px;
+	font-family:serif;
+}
+
+#projects{
+	text-align: center;
+	color:white;
+	font-size:38px;
+	font-family:serif;
+}
+.row3{
+	height:100%;
+	margin:42% 0% 35% 0%;
+	background-color: #E6E5E1;
+}
+.title{
+	text-align: center;
+	font-size:20px;
+}
+
+ul.img-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+ul.img-list li {
+  display: inline-block;
+  height: 150px;
+  margin: 0 1em 1em 0;
+  position: relative;
+  height:100%;
+  width:100%;
+  z-index: 2;
+}
+
+
+.education,.sales,.coding{
+	margin-right:24%;
+	font-size:20px;
+}
+
+.more-info{
+	color:black;
+	font-size:20px;
+}
+
+.email{
+	font-size:15px;
+}
+
+.resume{
+	font-size:15px;
+	margin-bottom:3%;
+	font-family:Roboto, arial, sans-serif;
+
+}
+
+.home{
+	margin:0% 0% 8% 16%;
+	font-family:Roboto, arial, sans-serif;
+
+}
+
+.contact-header{
+	border-bottom:1px solid black;
+	display: table;
+	padding-right:50px;
+	padding-left:50px;
+	font-family:Roboto, arial, sans-serif;
+	font-size:30px;
+	font-weight:bold;
+	margin:10% 0% 3% 0%;
+
+}
+.hovereffect {
+width:91%;
+height:100%;
+margin-bottom:37%;
+margin-left:12%;
+float:left;
+background-color:#E6E5E1;
+overflow:hidden;
+position:relative;
+text-align:center;
+cursor:default;
+}
+
+.hovereffect .overlay {
+width:85%;
+height:100%;
+position:absolute;
+overflow:hidden;
+top:0;
+left:0;
+opacity:0;
+background-color:grey;
+-webkit-transition:all .4s ease-in-out;
+transition:all .4s ease-in-out
+}
+
+.hovereffect img {
+display:block;
+position:relative;
+-webkit-transition:all .4s linear;
+transition:all .4s linear;
+}
+
+.hovereffect h2 {
+text-transform:uppercase;
+color:#fff;
+text-align:center;
+position:relative;
+font-size:17px;
+background:rgba(0,0,0,0.6);
+-webkit-transform:translatey(-100px);
+-ms-transform:translatey(-100px);
+transform:translatey(-100px);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+padding:10px;
+}
+
+.hovereffect a.info {
+text-decoration:none;
+display:inline-block;
+text-transform:uppercase;
+color:#fff;
+border:1px solid #fff;
+background-color:transparent;
+opacity:0;
+filter:alpha(opacity=0);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+margin:50px 0 0;
+padding:7px 14px;
+}
+
+.hovereffect a.info:hover {
+box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+-ms-transform:scale(1.2);
+-webkit-transform:scale(1.2);
+transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+opacity:1;
+filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+opacity:1;
+filter:alpha(opacity=100);
+-ms-transform:translatey(0);
+-webkit-transform:translatey(0);
+transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+-webkit-transition-delay:.2s;
+transition-delay:.2s;
+}
+
+@media only screen and (max-width: 1200px){
+	.hovereffect{
+		height:100%;
+		margin-bottom:10%;
+		background-color:#E6E5E1;
+		overflow:hidden;
+		position:relative;
+		float: none;
+		text-align:center;
+		cursor:default;
+	}
+	.hovereffect img{
+		display: block;
+		text-align: center;
+		position: relative;
+		margin-left:30%;
+		transition: all .4s linear;
+		-webkit-transition:all .4s linear;
+	}
+	.hovereffect .overlay{
+		height: 100%;
+		margin-left: 0%;
+		position:absolute;
+		overflow: hidden;
+		top: 0;
+		left: 0;
+		opacity: 0;
+		background-color: grey;
+		transition: all .4s, ease-in-out;
+	}
+	.education, .sales, .coding{
+		font-size: 20px;
+		margin-left: 7%;
+	}
+
+}
+
